// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MpxView should handle background properties 1`] = `
<View
  style={
    {
      "backgroundColor": "#ff0000",
      "borderRadius": 10,
    }
  }
  testID="background-view"
>
  <View
    onLayout={[Function]}
    style={
      {
        "borderRadius": 10,
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    allowFontScaling={false}
    style={{}}
  >
    Background content
  </Text>
</View>
`;

exports[`MpxView should handle complex background property combinations: complex-bg-view 1`] = `
<View
  style={
    {
      "borderRadius": 10,
      "height": 200,
      "width": 300,
    }
  }
  testID="complex-bg-view"
>
  <View
    onLayout={[Function]}
    style={
      {
        "borderRadius": 10,
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    allowFontScaling={false}
    style={{}}
  >
    Complex background
  </Text>
</View>
`;

exports[`MpxView should handle deeply nested complex structures: deep-nested-view 1`] = `
<View
  style={
    {
      "boxSizing": "content-box",
      "padding": 10,
    }
  }
  testID="deep-nested-view"
>
  <View
    style={
      {
        "backgroundColor": "#ff0000",
        "margin": 5,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={{}}
    >
      Level 1
    </Text>
    <View
      style={
        {
          "backgroundColor": "#00ff00",
          "margin": 5,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={{}}
      >
        Level 2
      </Text>
      <View
        style={
          {
            "backgroundColor": "#0000ff",
            "margin": 5,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={{}}
        >
          Level 3
        </Text>
        <View
          style={
            {
              "backgroundColor": "#ffff00",
              "margin": 5,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={{}}
          >
            Level 4
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MpxView should handle flex layout properties 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "justifyContent": "space-between",
    }
  }
  testID="flex-view"
>
  <Text
    allowFontScaling={false}
    style={{}}
  >
    Item 1
  </Text>
  <Text
    allowFontScaling={false}
    style={{}}
  >
    Item 2
  </Text>
</View>
`;

exports[`MpxView should handle linear gradient backgrounds: gradient-view 1`] = `
<View
  style={
    {
      "height": 150,
      "width": 300,
    }
  }
  testID="gradient-view"
>
  <View
    onLayout={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    allowFontScaling={false}
    style={{}}
  >
    Gradient background
  </Text>
</View>
`;

exports[`MpxView should handle nested views and complex structure 1`] = `
<View
  style={
    {
      "boxSizing": "content-box",
      "padding": 5,
    }
  }
  testID="nested-view"
>
  <View
    style={
      {
        "margin": 2,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={{}}
    >
      Nested content
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    style={{}}
  >
    Sibling content
  </Text>
</View>
`;

exports[`MpxView should handle parent size context: parent-size-view 1`] = `
<View
  style={
    {
      "boxSizing": "content-box",
      "height": 150,
      "padding": 10,
      "width": 300,
    }
  }
  testID="parent-size-view"
>
  <Text
    allowFontScaling={false}
    style={
      {
        "fontSize": 24,
      }
    }
  >
    Parent size context view
  </Text>
</View>
`;

exports[`MpxView should pass text styles through to inline children: context-view 1`] = `
<View
  style={
    {
      "backgroundColor": "#007AFF",
      "borderRadius": 8,
      "boxSizing": "content-box",
      "height": 100,
      "margin": 12,
      "padding": 16,
      "width": 200,
    }
  }
  testID="context-view"
>
  <Text
    allowFontScaling={false}
    style={
      {
        "color": "#ff0000",
        "fontSize": 16,
      }
    }
  >
    Context styled view
  </Text>
</View>
`;

exports[`MpxView should render with basic props and styles 1`] = `
<View
  style={
    {
      "backgroundColor": "#f0f0f0",
      "borderRadius": 5,
      "boxSizing": "content-box",
      "padding": 10,
    }
  }
  testID="basic-view"
>
  <Text
    allowFontScaling={false}
    style={{}}
  >
    Basic content
  </Text>
</View>
`;
